--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@
   .horiseon {
     grid-column: 1/3;
     grid-row: span 2;
-    background-image:url("");
+    background-image:url("../portfolio/horiseon.PNG");
   }
   
   .run-buddy-1 {
@@ -210,7 +210,7 @@
   }
   
   .portfolio {
-    background-image: url("");
+    background-image: url("../portfolio/portfolio_screenshot.png");
   }
   
   .project-name {
