--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,8 @@
 :root{
     --blue: #296e96;
     --black: rgba(172, 158, 158, 0);
-    --white: #ffff;
-    --green: #62a172b7;
+    --white: hsl(0, 0%, 100%);
+    --crimson: hsla(24, 91%, 44%, 0.718);
   }
   
   * {
@@ -225,7 +225,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-top: 30px;
+    padding-top: 20px;
     
   }
   
@@ -237,7 +237,7 @@
   }
   
   #contact-list {
-    width: 75%;
+    width: 55%;
   }
   
   footer ul {
@@ -246,7 +246,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: center;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bolder;
   }
   
